external-dns-aws/nginx_using_loadbalancer-service/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx" # use the one that corresponds to your ingress controller.
spec:
  rules:
  - host: cloudoutloud.co.uk
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
